--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,11 @@
-- Create login page and login endoints
+- Password hashing
+-  how to store "authenticated_user" in React App to use info through the App / redirect to login page if not authenticated
 
-- How to return image from backend bavc
-- Search UP how to store "authenticated_user" in React App so we can use User info through the App
+- How to return image from backend static folder to frontend
+
 - Search up how to display signup/login page if (!authenticated_user), and display the WhatsAppWeb page if authenticared_user is True
 
 
 Completed
 - Fix Register frontend function to (if successful) go to login page
+- Create login page and login endoints
