--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 
 To do 
-- Block chat creation if currentChat exists
 - WebSockets (send message functionality) 
+- Retrieve last message for chats
 
 Completed
 - Fix Register frontend function to (if successful) go to login page
@@ -15,3 +15,4 @@ Completed
 - Signup/Login Design
 - Display messages based on sender/receiver
 - Create Chats based on current Users
+- Block chat creation if currentChat exists
