--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 
 To do 
-- Update Chats being texted to go up
+- Fix added message not to go to wrong chat, but stil update lastMessage of the right chat
 - Fix Chat css to scroll
 
 
@@ -19,3 +19,6 @@ Completed
 - Block chat creation if currentChat exists
 - Retrieve last message for chats
 - WebSockets (send message functionality) 
+- Update Chats being texted to go up
+
+
